paid/force-app/main/default/objects/Order/fields/PAID_Contact_Creation_Status__c.field-meta.xml
<CustomField>
    <fullName>PAID_Contact_Creation_Status__c</fullName>
    <description>Status of contact creation in PAID</description>
    <inlineHelpText>Shows whether contact creation in PAID was successful or failed</inlineHelpText>
    <label>PAID Contact Creation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>