paid/force-app/main/default/objects/Order/fields/PAID_ContactExternalID__c.field-meta.xml
<CustomField>
    <fullName>PAID_ContactExternalID__c</fullName>
    <description>Stores the Contact ID returned from PAID API</description>
    <externalId>true</externalId>
    <inlineHelpText>This field contains the external Contact ID from the PAID system</inlineHelpText>
    <label>PAID Contact External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>