paid/force-app/main/default/objects/Order/fields/PAID_Customer_Creation_Status__c.field-meta.xml
<CustomField>
    <fullName>PAID_Customer_Creation_Status__c</fullName>
    <description>This field will be updated whenever the customer integration succeeds or fails.</description>
    <label>PAID Customer Creation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>