paid/force-app/main/default/objects/Order/fields/PAID_CustomerExternalID__c.field-meta.xml
<CustomField>
    <fullName>PAID_CustomerExternalID__c</fullName>
    <description>Stores the unique Customer ID generated in PAID.</description>
    <externalId>true</externalId>
    <label>PAID Customer External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>