paid/force-app/main/default/objects/Order/fields/Paid_Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>Paid_Invoice_ID__c</fullName>
    <label>Paid Invoice ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>