paid/force-app/main/default/objects/Order/fields/PAID_Order_Activation_Status__c.field-meta.xml
<CustomField>
    <fullName>PAID_Order_Activation_Status__c</fullName>
    <label>PAID Order Activation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>