paid/force-app/main/default/objects/Order/fields/PAID_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>PAID_Order_ID__c</fullName>
    <description>Stores the unique Order ID generated in PAID.</description>
    <externalId>true</externalId>
    <label>PAID Order ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>