paid/force-app/main/default/objects/Order/fields/Sent_Contact_to_PAID__c.field-meta.xml
<CustomField>
    <fullName>Sent_Contact_to_PAID__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if contact creation has been sent to PAID</description>
    <inlineHelpText>Checked when contact creation request is sent to PAID API</inlineHelpText>
    <label>Sent Contact to PAID</label>
    <type>Checkbox</type>
</CustomField>