paid/force-app/main/default/objects/Order/fields/Sent_Customer_to_PAID__c.field-meta.xml
<CustomField>
    <fullName>Sent_Customer_to_PAID__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whenever the request is sent to PAID, this checkbox will be automatically selected.</description>
    <label>Sent Customer to PAID</label>
    <type>Checkbox</type>
</CustomField>